--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,27 @@
 name: CI
 
+on [push]:
 jobs:
   uv-example:
     name: python
     runs-on: ubuntu-latest
 
     steps:
-      - uses: uv run pre-commit run -a
+      - uses: actions/checkout@v4
 
-      - name: unit tests
-        uses: uv run python -m unittest
+      - name: Install uv
+        uses: astral-sh/setup-uv@v3
+
+      - name: Set up Python
+        run: uv python install
+
+      - name: Install the project
+        run: uv sync --all-extras --dev
+
+      - name: Run tests
+        # For example, using `pytest`
+        run: uv run pthon -m unittest
+
+      - name: Run precommit
+        # For example, using `pytest`
+        run: uv run pre-commit run -a
