--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,12 @@
 name: CI
+strategy:
+  matrix:
+    python-version:
+      - "3.10"
+      - "3.11"
+      - "3.12"
+
+
 
 on: [push]
 jobs:
@@ -12,8 +20,8 @@ jobs:
       - name: Install uv
         uses: astral-sh/setup-uv@v3
 
-      - name: Set up Python
-        run: uv python install
+      - name: Set up Python ${{ matrix.python-version }}
+        run: uv python install ${{ matrix.python-version }}
 
       - name: Install the project
         run: uv sync --all-extras --dev
