--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,6 +1,6 @@
 repos:
 - repo: https://github.com/astral-sh/ruff-pre-commit
-  rev: v0.7.1
+  rev: v0.8.2
   hooks:
   - id: ruff
     args:
@@ -12,13 +12,14 @@ repos:
   hooks:
   - id: cmake-format
 - repo: https://github.com/pre-commit/mirrors-clang-format
-  rev: v19.1.2
+  rev: v19.1.4
   hooks:
   - id: clang-format
+    args: [--style=WebKit]
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v5.0.0
   hooks:
-  - id: check-added-large-files
+  # - id: check-added-large-file
   - id: check-ast
   - id: check-executables-have-shebangs
   - id: check-json
